revise notifcation message

--- a/deploy-app/action.yml
+++ b/deploy-app/action.yml
@@ -89,7 +89,7 @@ runs:
       if: ${{ success() }}
       shell: bash
       run: |
-        echo "::set-output name=color::good"
+        echo "::set-output name=color::#2EB67D"
         echo "::set-output name=title::Successfully deploy ${{ inputs.application_name }} on ${{ inputs.environment }} environment"
         echo "::set-output name=message::You can access to this deployment at https://${{ inputs.endpoint }}"
 
@@ -97,7 +97,7 @@ runs:
       if: ${{ failure() }}
       shell: bash
       run: |
-        echo "::set-output name=color::danger"
+        echo "::set-output name=color::#E01E5A"
         echo "::set-output name=title::Fail to deploy ${{ inputs.application_name }} on ${{ inputs.environment }} environment"
         echo "::set-output name=message::Cannot deploy ${{ inputs.application_name }} from $GITHUB_REF to ${{ inputs.environment }} environment"
   
@@ -107,44 +107,70 @@ runs:
       with:
         payload: |
           {
-            "text": "${{ steps.fail_message.outputs.message || steps.success_message.outputs.message }}",
-            "blocks": [
+            "text": "${{ steps.fail_message.outputs.title || steps.success_message.outputs.title }}",
+            "attachments": [
               {
-                "type": "context",
-                "elements": [
+                "color": "${{ steps.fail_message.outputs.color || steps.success_message.outputs.color }}",
+                "blocks": [
                   {
-                    "type": "image",
-                    "image_url": "${{ github.event.sender.avatar_url }}",
-                    "alt_text": "${{ github.event.sender.login }}"
+                    "type": "context",
+                    "elements": [
+                      {
+                        "type": "image",
+                        "image_url": "${{ github.event.sender.avatar_url }}",
+                        "alt_text": "${{ github.event.sender.login }}"
+                      },
+                      {
+                        "type": "mrkdwn",
+                        "text": "${{ github.event.sender.login }}"
+                      }
+                    ]
                   },
                   {
-                    "type": "mrkdwn",
-                    "text": "${{ github.event.sender.login }}"
+                    "type": "section",
+                    "text": {
+                      "type": "mrkdwn",
+                      "text": "${{ steps.fail_message.outputs.message || steps.success_message.outputs.message }}"
+                    },
+                    "fields": [
+                      {
+                        "type": "mrkdwn",
+                        "text": "*Repository*"
+                      },
+                      {
+                        "type": "mrkdwn",
+                        "text": "*Event*"
+                      },
+                      {
+                        "type": "mrkdwn",
+                        "text": "<${{ github.server_url }}/${{ github.repository }})|${{ github.repository }}>"
+                      },
+                      {
+                        "type": "mrkdwn",
+                        "text": "${{ github.event_name }}"
+                      },
+                      {
+                        "type": "mrkdwn",
+                        "text": "*Ref*"
+                      },
+                      {
+                        "type": "mrkdwn",
+                        "text": "*Commit*"
+                      },
+                      {
+                        "type": "mrkdwn",
+                        "text": "${{ github.ref_name }}"
+                      },
+                      {
+                        "type": "mrkdwn",
+                        "text": "<${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }})|${{ github.sha }}>"
+                      }
+                    ]
                   }
                 ]
-              },
-              {
-                "type": "header",
-                "text": {
-                  "type": "plain_text",
-                  "text": "${{ steps.fail_message.outputs.title || steps.success_message.outputs.title }}"
-                }
-              },
-              {
-                "type": "section",
-                "text": {
-                  "type": "mrkdwn",
-                  "text": "${{ steps.fail_message.outputs.message || steps.success_message.outputs.message }}"
-                }
               }
             ]
           }
       env:
-        # SLACK_CHANNEL: ${{ inputs.slack_channel }}
         SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
         SLACK_WEBHOOK_URL: ${{ inputs.slack_webhook }}
-        # SLACK_USERNAME: GitHub Actions
-        # SLACK_ICON: https://avatars.githubusercontent.com/u/90231066?s=200&v=4
-        # SLACK_COLOR: ${{ steps.fail_message.outputs.color || steps.success_message.outputs.color }}
-        # SLACK_TITLE: ${{ steps.fail_message.outputs.title || steps.success_message.outputs.title }}
-        # SLACK_MESSAGE: ${{ steps.fail_message.outputs.message || steps.success_message.outputs.message }}
