--- a/integration-test/action.yml
+++ b/integration-test/action.yml
@@ -136,29 +136,91 @@ runs:
       if: ${{ success() }}
       shell: bash
       run: |
-        echo "::set-output name=color::good"
-        echo "::set-output name=title::'${{ inputs.application_name }} integration test is PASS'"
-        echo "::set-output name=message::'All test case is PASS'"
+        echo "::set-output name=color::#2EB67D"
+        echo "::set-output name=title::${{ inputs.application_name }} integration test is PASS"
+        echo "::set-output name=message::All test case is PASS"
 
     - id: fail_message
       if: ${{ failure() }}
       shell: bash
       run: |
-        echo "::set-output name=color::danger"
-        echo "::set-output name=title::'${{ inputs.application_name }} integration test is FAIL'"
-        echo "::set-output name=message::'Found some failed test cases'"
+        echo "::set-output name=color::#E01E5A"
+        echo "::set-output name=title::${{ inputs.application_name }} integration test is FAIL"
+        echo "::set-output name=message::Found some failed test cases"
 
-    # - name: Slack Notification
-    #   if: ${{ always() }}
-    #   uses: rtCamp/action-slack-notify@v2
-    #   env:
-    #     SLACK_CHANNEL: ${{ inputs.slack_channel }}
-    #     SLACK_WEBHOOK: ${{ inputs.slack_webhook }}
-    #     SLACK_USERNAME: GitHub Actions
-    #     SLACK_ICON: https://avatars.githubusercontent.com/u/90231066?s=200&v=4
-    #     SLACK_COLOR: ${{ steps.fail_message.outputs.color || steps.success_message.outputs.color }}
-    #     SLACK_TITLE: ${{ steps.fail_message.outputs.title || steps.success_message.outputs.title }}
-    #     SLACK_MESSAGE: ${{ steps.fail_message.outputs.message || steps.success_message.outputs.message }}
+    - name: Slack Notification
+      if: ${{ always() }}
+      uses: slackapi/slack-github-action@v1.18.0
+      with:
+        payload: |
+          {
+            "text": "${{ steps.fail_message.outputs.title || steps.success_message.outputs.title }}",
+            "attachments": [
+              {
+                "color": "${{ steps.fail_message.outputs.color || steps.success_message.outputs.color }}",
+                "blocks": [
+                  {
+                    "type": "context",
+                    "elements": [
+                      {
+                        "type": "image",
+                        "image_url": "${{ github.event.sender.avatar_url }}",
+                        "alt_text": "${{ github.event.sender.login }}"
+                      },
+                      {
+                        "type": "mrkdwn",
+                        "text": "${{ github.event.sender.login }}"
+                      }
+                    ]
+                  },
+                  {
+                    "type": "section",
+                    "text": {
+                      "type": "mrkdwn",
+                      "text": "${{ steps.fail_message.outputs.message || steps.success_message.outputs.message }}"
+                    },
+                    "fields": [
+                      {
+                        "type": "mrkdwn",
+                        "text": "*Repository*"
+                      },
+                      {
+                        "type": "mrkdwn",
+                        "text": "*Event*"
+                      },
+                      {
+                        "type": "mrkdwn",
+                        "text": "<${{ github.server_url }}/${{ github.repository }})|${{ github.repository }}>"
+                      },
+                      {
+                        "type": "mrkdwn",
+                        "text": "${{ github.event_name }}"
+                      },
+                      {
+                        "type": "mrkdwn",
+                        "text": "*Ref*"
+                      },
+                      {
+                        "type": "mrkdwn",
+                        "text": "*Commit*"
+                      },
+                      {
+                        "type": "mrkdwn",
+                        "text": "${{ github.ref_name }}"
+                      },
+                      {
+                        "type": "mrkdwn",
+                        "text": "<${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }})|${{ github.sha }}>"
+                      }
+                    ]
+                  }
+                ]
+              }
+            ]
+          }
+      env:
+        SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
+        SLACK_WEBHOOK_URL: ${{ inputs.slack_webhook }}
 
     - name: Tear down integration test environment
       if: ${{ always() }}
