--- a/unit-test/action.yml
+++ b/unit-test/action.yml
@@ -60,9 +60,9 @@ runs:
       if: ${{ failure() }}
       shell: bash
       run: |
-        echo "::set-output name=color::danger"
-        echo "::set-output name=title::'${{ inputs.application_name }} unit test is FAIL'"
-        echo "::set-output name=message::'Found some failed test cases'"
+        echo "::set-output name=color::#E01E5A"
+        echo "::set-output name=title::${{ inputs.application_name }} unit test is FAIL"
+        echo "::set-output name=message::Found some failed test cases"
 
     - name: Create coverage report
       if: ${{ inputs.language != 'flutter' }}
@@ -94,7 +94,7 @@ runs:
       if: ${{ success() }}
       shell: bash
       run: |
-        echo "::set-output name=color::good"
+        echo "::set-output name=color::#2EB67D"
         echo "::set-output name=title::Test coverage of ${{ inputs.application_name }} is PASS"
         echo "::set-output name=message::Coverage rate is more than ${{ inputs.minimum_coverage }}%"
 
@@ -102,7 +102,7 @@ runs:
       if: ${{ failure() }}
       shell: bash
       run: |
-        echo "::set-output name=color::danger"
+        echo "::set-output name=color::#E01E5A"
         echo "::set-output name=title::Test coverage of ${{ inputs.application_name }} is FAIL"
         echo "::set-output name=message::Coverage rate is less than ${{ inputs.minimum_coverage }}%"
 
@@ -112,44 +112,70 @@ runs:
       with:
         payload: |
           {
-            "text": "${{ steps.fail_message.outputs.message || steps.fail_coverage.outputs.message || steps.success_coverage.outputs.message }}",
-            "blocks": [
+            "text": "${{ steps.fail_message.outputs.title || steps.fail_coverage.outputs.title || steps.success_coverage.outputs.title }}",
+            "attachments": [
               {
-                "type": "context",
-                "elements": [
+                "color": "${{ steps.fail_message.outputs.color || steps.fail_coverage.outputs.color || steps.success_coverage.outputs.color }}",
+                "blocks": [
                   {
-                    "type": "image",
-                    "image_url": "${{ github.event.sender.avatar_url }}",
-                    "alt_text": "${{ github.event.sender.login }}"
+                    "type": "context",
+                    "elements": [
+                      {
+                        "type": "image",
+                        "image_url": "${{ github.event.sender.avatar_url }}",
+                        "alt_text": "${{ github.event.sender.login }}"
+                      },
+                      {
+                        "type": "mrkdwn",
+                        "text": "${{ github.event.sender.login }}"
+                      }
+                    ]
                   },
                   {
-                    "type": "mrkdwn",
-                    "text": "${{ github.event.sender.login }}"
+                    "type": "section",
+                    "text": {
+                      "type": "mrkdwn",
+                      "text": "${{ steps.fail_message.outputs.message || steps.fail_coverage.outputs.message || steps.success_coverage.outputs.message }}"
+                    },
+                    "fields": [
+                      {
+                        "type": "mrkdwn",
+                        "text": "*Repository*"
+                      },
+                      {
+                        "type": "mrkdwn",
+                        "text": "*Event*"
+                      },
+                      {
+                        "type": "mrkdwn",
+                        "text": "<${{ github.server_url }}/${{ github.repository }})|${{ github.repository }}>"
+                      },
+                      {
+                        "type": "mrkdwn",
+                        "text": "${{ github.event_name }}"
+                      },
+                      {
+                        "type": "mrkdwn",
+                        "text": "*Ref*"
+                      },
+                      {
+                        "type": "mrkdwn",
+                        "text": "*Commit*"
+                      },
+                      {
+                        "type": "mrkdwn",
+                        "text": "${{ github.ref_name }}"
+                      },
+                      {
+                        "type": "mrkdwn",
+                        "text": "<${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }})|${{ github.sha }}>"
+                      }
+                    ]
                   }
                 ]
-              },
-              {
-                "type": "header",
-                "text": {
-                  "type": "plain_text",
-                  "text": "${{ steps.fail_message.outputs.title || steps.fail_coverage.outputs.title || steps.success_coverage.outputs.title }}"
-                }
-              },
-              {
-                "type": "section",
-                "text": {
-                  "type": "mrkdwn",
-                  "text": "${{ steps.fail_message.outputs.message || steps.fail_coverage.outputs.message || steps.success_coverage.outputs.message }}"
-                }
               }
             ]
           }
       env:
-        # SLACK_CHANNEL: ${{ inputs.slack_channel }}
         SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
         SLACK_WEBHOOK_URL: ${{ inputs.slack_webhook }}
-        # SLACK_USERNAME: GitHub Actions
-        # SLACK_ICON: https://avatars.githubusercontent.com/u/90231066?s=200&v=4
-        # SLACK_COLOR: ${{ steps.fail_message.outputs.color || steps.fail_coverage.outputs.color || steps.success_coverage.outputs.color }}
-        # SLACK_TITLE: ${{ steps.fail_message.outputs.title || steps.fail_coverage.outputs.title || steps.success_coverage.outputs.title }}
-        # SLACK_MESSAGE: ${{ steps.fail_message.outputs.message || steps.fail_coverage.outputs.message || steps.success_coverage.outputs.message }}
