force and wait to delete argo app

--- a/.github/workflows/uninstall-release.yml
+++ b/.github/workflows/uninstall-release.yml
@@ -49,5 +49,5 @@ jobs:
           kubectl config use-context default
 
           kubectl patch -n argocd app ${{ inputs.application_name }}-refs-pull-${{ github.event.pull_request.number }}-merge -p '{"metadata": {"finalizers": ["resources-finalizer.argocd.argoproj.io"]}}' --type merge
-          kubectl delete -n argocd app ${{ inputs.application_name }}-refs-pull-${{ github.event.pull_request.number }}-merge
+          kubectl delete -n argocd app ${{ inputs.application_name }}-refs-pull-${{ github.event.pull_request.number }}-merge --wait
           helm uninstall ${{ inputs.application_name }}-refs-pull-${{ github.event.pull_request.number }}-merge
